--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -72,7 +72,7 @@
 
         </div>
         <div class="col-md-6">
-
+          <p>mmmmmmmmm my name is monir</p>
         </div>
       </div>
   </div>    
