--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -37,6 +37,9 @@
 
     <svg style="display: none;">
 
+      <!-- <svg class="id-name" width="16" height="16" viewBox="0 0 16 16" fill="#FF5C26">
+      <use xlink:href="#id-name"></use> </svg> -->
+
       <!-- start of Ranojit -->
 
 
