--- a/themes/wwcomps/entry-lists.html
+++ b/themes/wwcomps/entry-lists.html
@@ -48,8 +48,9 @@
                     <div class="title-bar mHc">
                       <h5 class="entty-item-title">NISSAN 370Z & £1000</h5>
                     </div>
-                    <p>publish on:<span>january 6,2021</span></p>
-                    <p>drawn on:<span>january 6,2021,6:00 pm</span></p>
+                    <p>Publish on:<span>January 6,2021</span></p>
+                    <p>Drawn on:<span>January 6,2021,6:00 pm</span></p>
+                    <a href="#">view</a>
                 </div>
               </li>
               <li>
@@ -57,8 +58,9 @@
                     <div class="title-bar mHc">
                       <h5 class="entty-item-title">NISSAN 370Z & £1000 heelo hello</h5>
                     </div>
-                    <p>publish on:<span>january 6,2021</span></p>
-                    <p>drawn on:<span>january 6,2021,6:00 pm</span></p>
+                    <p>Publish on:<span>January 6,2021</span></p>
+                    <p>Drawn on:<span>January 6,2021,6:00 pm</span></p>
+                    <a href="#">view</a>
                 </div>
               </li>
               <li>
@@ -66,8 +68,9 @@
                     <div class="title-bar mHc">
                       <h5 class="entty-item-title">NISSAN 370Z & £1000</h5>
                     </div>
-                    <p>publish on:<span>january 6,2021</span></p>
-                    <p>drawn on:<span>january 6,2021,6:00 pm</span></p>
+                    <p>Publish on:<span>January 6,2021</span></p>
+                    <p>Drawn on:<span>January 6,2021,6:00 pm</span></p>
+                    <a href="#">view</a>
                 </div>
               </li>
             </ul>
