--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" type="text/css" href="assets/fancybox3/dist/jquery.fancybox.min.css">
   <link rel="stylesheet" type="text/css" href="assets/slick.slider/slick-theme.css">
   <link rel="stylesheet" type="text/css" href="assets/slick.slider/slick.css">
+  <link rel="stylesheet" type="text/css" href="assets/swiper/swiper-bundle.min.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -145,17 +146,35 @@
   </div>    
 </section>
 
-<ol>
-  <li class="facebook"><a href="#"></a></li>
-</ol>
 
 <footer class="footer-wrp">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-4">
-          <div class="ftr-col">
-            <div></div>
-          </div>
+  <div class="footer-top">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+            <div class="ftr-col">
+              <div></div>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer-btm">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+            <div class="ftr-btm-con">
+              <div class="copyright-text">
+                <p>&copy; Copyright 2021 - All rights reserved to Wild Wood Comps </p>
+              </div>
+              <div class="copyright-menu">
+                <ul class="reset-list">
+                  <li><a href="#">Privacy Policy </a></li>
+                  <li><a href="#">Terms and Conditions</a></li>
+                </ul>
+              </div>
+            </div>
+        </div>
       </div>
     </div>
   </div> 
@@ -169,6 +188,7 @@
 <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
 <script src="assets/fancybox3/dist/jquery.fancybox.min.js"></script>
 <script src="assets/slick.slider/slick.js"></script>
+<script src="assets/swiper/swiper-bundle.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBaRQsAJCZyyD6MbCg0jB_0sdLGEOxt97Y"></script>
 <script src="assets/js/jquery.matchHeight-min.js"></script>
 <script src="assets/js/app.js"></script>
