--- a/themes/wwcomps/how-it-works.html
+++ b/themes/wwcomps/how-it-works.html
@@ -30,59 +30,29 @@
 
 </head>
 <body>
-<header class="header">
-  <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="header-inr clearfix">
-            <div class="hdr-lft">
-              <div class="logo">
-                <a href="#"><img src="assets/images/logo.png"></a>
-              </div>
-            </div>
-            <div class="hdr-rgt">
-              <nav class="main-nav">
-                <ol class="clearfix">
-                  <li><a href="#"></a></li>
-                  <li><a href="#"></a></li>
-                  <li><a href="#"></a></li>
-                  <li><a href="#"></a></li>
-                  <li><a href="#"></a></li>
-                  <li><a href="#"></a></li>
-                  <li><a href="#"></a></li>
-                </ol>
-              </nav>
-            </div>
-          </div>
-        </div>
-      </div>
+
+
+<section class="page-banner-section">
+  <div class="banner-bg">
+    <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
+    <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/hit-bnr-page-rgt-img.jpg')"></div>
   </div>
-</header>
-
-<section class="main-content">
   <div class="container">
       <div class="row">
-        <div class="col-md-6">
-        </div>
-        <div class="col-md-6">
-        </div>
-      </div>
-  </div>    
-</section>
-
-
-
-<section class="main-content">
-  <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="sitemap">
-            <h2>Sitemap</h2>
-            <nav>
-              <ul>
-                <li><a href="front-page.html" target="_blank">Home</a></li>
-              </ul>
-            </nav>
+        <div class="col-md-12">
+          <div class="page-des">
+            <h1 class="fl-h1">PLAY TO PLANT.</h1>
+            <h3 class="fl-h3">WIN YOUR DREAM PRIZE WHILE HELPING TO RESTORE FORESTS</h3>
+            <strong>Here's how it works:</strong>
+            <div class="default-page-con">
+              <ol>
+                <li>Choose a competition and how many entries you would like.</li>
+                <li>Answer the qualifying question (be sure to answer correctly!) and complete payment.</li>
+                <li>Tickets for all correct answers are entered into the draw, streamed LIVE on Facebook using Google’s random number generator.</li>
+                <li>If you win, we may try to contact you whilst live on our website and Facebook, so be prepared!</li>
+              </ol>
+            </div>
+            <a class="fl-btn" href="#">SEE COMPETITIONS</a>
           </div>
         </div>
       </div>
@@ -90,16 +60,9 @@
 </section>
 
 
-<div class="">
-  <div id="mapID" class="" data-latitude="23.7749" data-longitude="90.3657" style="width:100%; height:295px"></div>
-</div>
 
 
 
-<!-- -- Gap markup--- -->
-<div class="gap" data-value='100' data-md='50' data-xs='40' data-sm='30' data-xxs='20'></div>
-<div class="margin" data-value='100'></div>
-<div class="padding" data-value='100'></div>
 
 
 
