--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -167,14 +167,12 @@
               <div class="hdr-menu">
                 <nav class="main-nav">
                   <ul class="clearfix reset-list">
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    
+                    <li><a href="#">latest competitions</a></li>
+                    <li><a href="#">entry lists</a></li>
+                    <li><a href="#">live draws</a></li>
+                    <li><a href="#">winners</a></li>
+                    <li><a href="#">forest projects</a></li>
+                    <li><a href="#">how it</a></li>
                   </ul>
                 </nav>
               </div>
@@ -205,7 +203,7 @@
 </section>
 
 
-<footer class="footer-wrp">
+<footer class="footer-wrp d-none">
   <div class="footer-top">
     <div class="container">
       <div class="row">
