--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -203,7 +203,7 @@
 </section>
 
 
-<footer class="footer-wrp d-none">
+<footer class="footer-wrp">
   <div class="footer-top">
     <div class="container">
       <div class="row">
