--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -258,7 +258,7 @@
                     <div class="ftr-contact-info-row">
                       <strong>ADDRESS:</strong>
                       <div>
-                        <a href="#">83 Upper St, Camden, 
+                        <a href="#">83 Upper St, Camden, <br>
                           London, N1 0NU
                           </a>
                       </div>
