--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -167,8 +167,8 @@
               <div class="hdr-menu">
                 <nav class="main-nav">
                   <ul class="clearfix reset-list">
-                    <li><a href="#">latest competitions</a></li>
-                    <li><a href="#">entry lists</a></li>
+                    <li class="current-menu-item"><a href="#">latest competitions</a></li>
+                    <li class="menu-item-has-children"><a href="#">entry lists</a></li>
                     <li><a href="#">live draws</a></li>
                     <li><a href="#">winners</a></li>
                     <li><a href="#">forest projects</a></li>
@@ -203,7 +203,7 @@
 </section>
 
 
-<footer class="footer-wrp">
+<footer class="footer-wrp d-none">
   <div class="footer-top">
     <div class="container">
       <div class="row">
