--- a/themes/wwcomps/how-it-works.html
+++ b/themes/wwcomps/how-it-works.html
@@ -46,7 +46,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="page-des">
-            <h1 class="fl-h1">PLAY TO PLANT.</h1>
+            <h1 class="fl-h1">PLAY TO <strong>PLANT.</strong></h1>
             <h3 class="fl-h3">WIN YOUR DREAM PRIZE WHILE HELPING TO RESTORE FORESTS</h3>
             <strong>Here's how it works:</strong>
             <div class="default-page-con">
@@ -58,6 +58,7 @@
               </ol>
             </div>
             <a class="fl-btn" href="#">SEE COMPETITIONS</a>
+            <span><img src="assets/images/hit-page-des-angle.png" alt=""></span>
           </div>
         </div>
       </div>
