--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -203,6 +203,29 @@
 </section>
 
 
+<section class="main-content">
+  <div class="fl-angle-hdr">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+
+        </div>
+      </div>
+    </div> 
+  </div>
+
+  <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+
+        </div>
+        <div class="col-md-6">
+        </div>
+      </div>
+  </div>    
+</section>
+
+
 <footer class="footer-wrp d-none">
   <div class="footer-top">
     <div class="container">
