--- a/themes/wwcomps/how-it-works.html
+++ b/themes/wwcomps/how-it-works.html
@@ -65,7 +65,7 @@
   </div>    
 </section>
 
-<footer class="footer-wrp d-none">
+<footer class="footer-wrp">
   <div class="footer-top">
     <div class="container">
       <div class="row">
