--- a/themes/wwcomps/ended-competitions.html
+++ b/themes/wwcomps/ended-competitions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home</title>
+	<title>Ended Competitions</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -190,39 +190,40 @@
   </div>
 </header>
 
-<section class="main-content">
-  <div class="container">
-      <div class="row">
-        <div class="col-md-6">
 
-        </div>
-        <div class="col-md-6">
-        </div>
-      </div>
-  </div>    
-</section>
-
-
-<section class="main-content">
+<section class="fl-angle-hdr-cntlr">
   <div class="fl-angle-hdr">
     <span class="fl-angle-hdr-join"></span>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <div class="fl-angle-sec-hdr">
-            <h2 class="fl-h5 flash-title"><span>LATEST</span> WINNERS</h2>
+            <h2 class="fl-h5 flash-title"><span>ENDED</span> COMPETITIONS</h2>
           </div>
         </div>
       </div>
     </div> 
   </div>
+</section>
 
+<section class="products-grd-page-con">
   <div class="container">
       <div class="row">
-        <div class="col-md-6">
-
-        </div>
-        <div class="col-md-6">
+        <div class="col-md-12">
+            <div class="product-grds-cntlr">
+              <ul class="reset-list">
+                <li>
+                  <div class="product-grd-item">
+                    <div class="pro-fea-img-cntlr">
+                      <div class="inline-bg" style="background: url(assets/images/.);"></div>
+                      <div class="pro-absolute-text">
+                        <span>ENDED!</span>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </div>
         </div>
       </div>
   </div>    
