--- a/themes/wwcomps/ended-competitions.html
+++ b/themes/wwcomps/ended-competitions.html
@@ -215,10 +215,14 @@
                 <li>
                   <div class="product-grd-item">
                     <div class="pro-fea-img-cntlr">
-                      <div class="inline-bg" style="background: url(assets/images/.);"></div>
+                      <a class="overlay-link" href="#"></a>
+                      <div class="inline-bg" style="background: url(assets/images/pro-img-01.jpg);"></div>
                       <div class="pro-absolute-text">
                         <span>ENDED!</span>
                       </div>
+                    </div>
+                    <div class="product-grd-item-des mHc">
+                      
                     </div>
                   </div>
                 </li>
