--- a/themes/wwcomps/how-it-works.html
+++ b/themes/wwcomps/how-it-works.html
@@ -36,6 +36,20 @@
 </head>
 <body>
 
+<section class="fl-angle-hdr-cntlr">
+  <div class="fl-angle-hdr">
+    <span class="fl-angle-hdr-join"></span>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="fl-angle-sec-hdr">
+            <h2 class="fl-h5 flash-title"><span>ENDED</span> COMPETITIONS</h2>
+          </div>
+        </div>
+      </div>
+    </div> 
+  </div>
+</section>
 
 <section class="page-banner-section">
   <div class="banner-bg">
