--- a/themes/wwcomps/how-it-works.html
+++ b/themes/wwcomps/how-it-works.html
@@ -61,12 +61,12 @@
         <div class="col-md-12">
           <div class="page-des">
             <h1 class="fl-h1">PLAY TO <strong>PLANT.</strong></h1>
-            <h3 class="fl-h3">WIN YOUR DREAM PRIZE WHILE HELPING TO RESTORE FORESTS</h3>
+            <h3 class="fl-h3">WIN YOUR DREAM PRIZE WHILE HELPING TO RESTORE FORESTS WORLDWIDE.</h3>
             <strong>Here's how it works:</strong>
             <div class="default-page-con">
               <ol>
                 <li>Choose a competition and how many entries you would like.</li>
-                <li>Answer the qualifying question (be sure to answer correctly!) and complete payment.</li>
+                <li>Answer the qualifying question (be sure to answer correctly!) <br> and complete payment.</li>
                 <li>Tickets for all correct answers are entered into the draw, streamed LIVE on Facebook using Google’s random number generator.</li>
                 <li>If you win, we may try to contact you whilst live on our website and Facebook, so be prepared!</li>
               </ol>
