--- a/themes/wwcomps/ended-competitions.html
+++ b/themes/wwcomps/ended-competitions.html
@@ -222,10 +222,204 @@
                       </div>
                     </div>
                     <div class="product-grd-item-des mHc">
-                      
+                      <h3 class="fl-h6 pgid-title"><a href="#">2010 FOCUS ST-3 + £500</a></h3>
+                      <div class="pro-grd-price">
+                        <span class="price">
+                          <span class="woocommerce-Price-amount amount">
+                            <bdi>
+                              <span class="woocommerce-Price-currencySymbol">£</span>19.99
+                            </bdi>
+                          </span>
+                        </span>
+                      </div>
                     </div>
                   </div>
                 </li>
+                <li>
+                  <div class="product-grd-item">
+                    <div class="pro-fea-img-cntlr">
+                      <a class="overlay-link" href="#"></a>
+                      <div class="inline-bg" style="background: url(assets/images/pro-img-01.jpg);"></div>
+                      <div class="pro-absolute-text">
+                        <span>ENDED!</span>
+                      </div>
+                    </div>
+                    <div class="product-grd-item-des mHc">
+                      <h3 class="fl-h6 pgid-title"><a href="#">2010 FOCUS ST-3 + £500</a></h3>
+                      <div class="pro-grd-price">
+                        <span class="price">
+                          <span class="woocommerce-Price-amount amount">
+                            <bdi>
+                              <span class="woocommerce-Price-currencySymbol">£</span>19.99
+                            </bdi>
+                          </span>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="product-grd-item">
+                    <div class="pro-fea-img-cntlr">
+                      <a class="overlay-link" href="#"></a>
+                      <div class="inline-bg" style="background: url(assets/images/pro-img-01.jpg);"></div>
+                      <div class="pro-absolute-text">
+                        <span>ENDED!</span>
+                      </div>
+                    </div>
+                    <div class="product-grd-item-des mHc">
+                      <h3 class="fl-h6 pgid-title"><a href="#">2010 FOCUS ST-3 + £500</a></h3>
+                      <div class="pro-grd-price">
+                        <span class="price">
+                          <span class="woocommerce-Price-amount amount">
+                            <bdi>
+                              <span class="woocommerce-Price-currencySymbol">£</span>19.99
+                            </bdi>
+                          </span>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="product-grd-item">
+                    <div class="pro-fea-img-cntlr">
+                      <a class="overlay-link" href="#"></a>
+                      <div class="inline-bg" style="background: url(assets/images/pro-img-01.jpg);"></div>
+                      <div class="pro-absolute-text">
+                        <span>ENDED!</span>
+                      </div>
+                    </div>
+                    <div class="product-grd-item-des mHc">
+                      <h3 class="fl-h6 pgid-title"><a href="#">2010 FOCUS ST-3 + £500</a></h3>
+                      <div class="pro-grd-price">
+                        <span class="price">
+                          <span class="woocommerce-Price-amount amount">
+                            <bdi>
+                              <span class="woocommerce-Price-currencySymbol">£</span>19.99
+                            </bdi>
+                          </span>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="product-grd-item">
+                    <div class="pro-fea-img-cntlr">
+                      <a class="overlay-link" href="#"></a>
+                      <div class="inline-bg" style="background: url(assets/images/pro-img-01.jpg);"></div>
+                      <div class="pro-absolute-text">
+                        <span>ENDED!</span>
+                      </div>
+                    </div>
+                    <div class="product-grd-item-des mHc">
+                      <h3 class="fl-h6 pgid-title"><a href="#">2010 FOCUS ST-3 + £500</a></h3>
+                      <div class="pro-grd-price">
+                        <span class="price">
+                          <span class="woocommerce-Price-amount amount">
+                            <bdi>
+                              <span class="woocommerce-Price-currencySymbol">£</span>19.99
+                            </bdi>
+                          </span>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="product-grd-item">
+                    <div class="pro-fea-img-cntlr">
+                      <a class="overlay-link" href="#"></a>
+                      <div class="inline-bg" style="background: url(assets/images/pro-img-01.jpg);"></div>
+                      <div class="pro-absolute-text">
+                        <span>ENDED!</span>
+                      </div>
+                    </div>
+                    <div class="product-grd-item-des mHc">
+                      <h3 class="fl-h6 pgid-title"><a href="#">2010 FOCUS ST-3 + £500</a></h3>
+                      <div class="pro-grd-price">
+                        <span class="price">
+                          <span class="woocommerce-Price-amount amount">
+                            <bdi>
+                              <span class="woocommerce-Price-currencySymbol">£</span>19.99
+                            </bdi>
+                          </span>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="product-grd-item">
+                    <div class="pro-fea-img-cntlr">
+                      <a class="overlay-link" href="#"></a>
+                      <div class="inline-bg" style="background: url(assets/images/pro-img-01.jpg);"></div>
+                      <div class="pro-absolute-text">
+                        <span>ENDED!</span>
+                      </div>
+                    </div>
+                    <div class="product-grd-item-des mHc">
+                      <h3 class="fl-h6 pgid-title"><a href="#">2010 FOCUS ST-3 + £500</a></h3>
+                      <div class="pro-grd-price">
+                        <span class="price">
+                          <span class="woocommerce-Price-amount amount">
+                            <bdi>
+                              <span class="woocommerce-Price-currencySymbol">£</span>19.99
+                            </bdi>
+                          </span>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="product-grd-item">
+                    <div class="pro-fea-img-cntlr">
+                      <a class="overlay-link" href="#"></a>
+                      <div class="inline-bg" style="background: url(assets/images/pro-img-01.jpg);"></div>
+                      <div class="pro-absolute-text">
+                        <span>ENDED!</span>
+                      </div>
+                    </div>
+                    <div class="product-grd-item-des mHc">
+                      <h3 class="fl-h6 pgid-title"><a href="#">2010 FOCUS ST-3 + £500</a></h3>
+                      <div class="pro-grd-price">
+                        <span class="price">
+                          <span class="woocommerce-Price-amount amount">
+                            <bdi>
+                              <span class="woocommerce-Price-currencySymbol">£</span>19.99
+                            </bdi>
+                          </span>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="product-grd-item">
+                    <div class="pro-fea-img-cntlr">
+                      <a class="overlay-link" href="#"></a>
+                      <div class="inline-bg" style="background: url(assets/images/pro-img-01.jpg);"></div>
+                      <div class="pro-absolute-text">
+                        <span>ENDED!</span>
+                      </div>
+                    </div>
+                    <div class="product-grd-item-des mHc">
+                      <h3 class="fl-h6 pgid-title"><a href="#">2010 FOCUS ST-3 + £500</a></h3>
+                      <div class="pro-grd-price">
+                        <span class="price">
+                          <span class="woocommerce-Price-amount amount">
+                            <bdi>
+                              <span class="woocommerce-Price-currencySymbol">£</span>19.99
+                            </bdi>
+                          </span>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                
               </ul>
             </div>
         </div>
