--- a/themes/wwcomps/how-it-works.html
+++ b/themes/wwcomps/how-it-works.html
@@ -67,6 +67,12 @@
               <ol>
                 <li>Choose a competition and how many entries you would like.</li>
                 <li>Answer the qualifying question (be sure to answer correctly!) <br> and complete payment.</li>
+                 <li>Answer the qualifying question (be sure to answer correctly!) <br> and complete payment.</li>
+                  <li>Answer the qualifying question (be sure to answer correctly!) <br> and complete payment.</li>
+                   <li>Answer the qualifying question (be sure to answer correctly!) <br> and complete payment.</li>
+                    <li>Answer the qualifying question (be sure to answer correctly!) <br> and complete payment.</li>
+                     <li>Answer the qualifying question (be sure to answer correctly!) <br> and complete payment.</li>
+                      <li>Answer the qualifying question (be sure to answer correctly!) <br> and complete payment.</li>
                 <li>Tickets for all correct answers are entered into the draw, streamed LIVE on Facebook using Google’s random number generator.</li>
                 <li>If you win, we may try to contact you whilst live on our website and Facebook, so be prepared!</li>
               </ol>
