--- a/themes/wwcomps/entry-lists.html
+++ b/themes/wwcomps/entry-lists.html
@@ -166,6 +166,17 @@
               </li>
             </ul>
           </div>
+          <div class="fl-pagi-cntlr">
+            <ul class="clear-fix reset-list ulc page-numbers">
+              <li><a class="prev page-numbers" href="#"></a></li>
+              <li><span aria-current="page" class="page-numbers current">1</span></li>
+              <li><a class="page-numbers" href="#">2</a></li>
+              <li><a class="page-numbers" href="#">3</a></li>
+              <li><span class="page-numbers dots">…</span></li>
+              <li><a class="page-numbers" href="#">25</a></li>
+              <li><a class="next page-numbers" href="#"></a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
