--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -229,6 +229,39 @@
 </section>
 
 
+
+<section class="lates-winners-section">
+  <div class="fl-angle-hdr">
+    <span class="fl-angle-hdr-join"></span>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="fl-angle-sec-hdr">
+            <h2 class="fl-h5 flash-title"><span>LATEST</span> WINNERS</h2>
+          </div>
+        </div>
+      </div>
+    </div> 
+  </div>
+
+  <div class="lates-winners-sec-con inline-bg" style="background: url(assets/images/lates-winners-sec-con-bg.jpg);">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+
+          </div>
+          <div class="col-md-12">
+            <div class="lwsc-btn">
+              <a class="fl-btn" href="#">SEE ALL WINNERS</a>
+            </div>
+          </div>
+        </div>
+    </div> 
+  </div>   
+</section>
+
+
+
 <footer class="footer-wrp">
   <div class="footer-top">
     <div class="container">
