--- a/themes/wwcomps/about-us.html
+++ b/themes/wwcomps/about-us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>How it works</title>
+  <title>About us</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -42,7 +42,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="fl-angle-sec-hdr">
-            <h2 class="fl-h5 flash-title"><span>HOW IT</span> WORKS</h2> 
+            <h2 class="fl-h5 flash-title"><span>ABOUT</span> US</h2>
           </div>
         </div>
       </div>
@@ -57,18 +57,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="page-des">
-          <h2 class="fl-h1">PLAY TO <strong>PLANT.</strong></h2>
-          <h3 class="fl-h3">WIN YOUR DREAM PRIZE WHILE HELPING TO RESTORE FORESTS WORLDWIDE.</h3>
-          <strong>Here's how it works:</strong>
-          <div class="default-page-con">
-            <ol>
-              <li>Choose a competition and how many entries you would like.</li>
-              <li>Answer the qualifying question (be sure to answer correctly!) <br> and complete payment.</li>
-              <li>Tickets for all correct answers are entered into the draw, streamed LIVE on Facebook using Google’s random number generator.</li>
-              <li>If you win, we may try to contact you whilst live on our website and Facebook, so be prepared!</li>
-            </ol>
-          </div>
+        <div class="page-des about-pg-des">
+          <h2><strong>FROM LITTLE THINGS,</strong>BIG THINGS GROW.</h2>
+          <h3 class="fl-h3">OUR COMPANY IS RUN BY 6 INDIVIDUALS SET ON MAKING A GLOBAL CHANGE.</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. Quisque gravida sagittis libero, eu euismod urna placerat sit amet. Mauris tempus molestie sem, in accumsan justo porta non.</p>
+          <p>Nulla volutpat eget est et ullamcorper. Ut porttitor nunc ac elit maximus maximus. Proin vestibulum risus purus, sed vestibulum augue bibendum at. Cras porta commodo diam, cursus egestas dui condimentum vitae. Etiam pretium tincidunt tortor, et dapibus purus placerat ut.</p>
           <a class="fl-btn" href="#">SEE COMPETITIONS</a>
           <span><img src="assets/images/hit-page-des-angle.png" alt=""></span>
         </div>
