--- a/themes/wwcomps/how-it-works.html
+++ b/themes/wwcomps/how-it-works.html
@@ -35,6 +35,105 @@
 
 </head>
 <body>
+<header class="header">
+  <div class="header-top">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="header-top-cntlr">
+            <div class="header-top-socials">
+              <ul class="reset-list">
+                <li>
+                  <a href="#">
+                    <i>
+                      <svg class="facebook-icon" width="7.713" height="14.854" viewBox="0 0 7.713 14.854" fill="#fff">
+                      <use xlink:href="#facebook-icon"></use> </svg>
+                    </i>
+                  </a>
+                </li>
+
+                <li>
+                  <a href="#">
+                    <i>
+                      <svg class="instagram-icon" width="13.711" height="13.711" viewBox="0 0 13.711 13.711" fill="#fff">
+                      <use xlink:href="#instagram-icon"></use> </svg>
+                    </i>
+                  </a>
+                </li>
+
+                <li>
+                  <a href="#">
+                    <i>
+                      <svg class="twiter-icon" width="14.069" height="11.426" viewBox="0 0 14.069 11.426" fill="#fff">
+                      <use xlink:href="#twiter-icon"></use> </svg>
+                    </i>
+                  </a>
+                </li>
+
+                <li>
+                  <a href="#">
+                    <i>
+                      <svg class="youtube-icon" width="15.996" height="11.426" viewBox="0 0 15.996 11.426" fill="#fff">
+                      <use xlink:href="#youtube-icon"></use> </svg>
+                    </i>
+                  </a>
+                </li>
+
+              </ul>
+            </div>
+            <div class="header-top-right">
+              <div class="hdr-top-rt-login">
+                <button>Login</button>
+                <i><img src="assets/images/user-icon.svg" alt=""></i>
+              </div>
+              <div class="hdr-top-rt-register">
+                <button>Register</button>
+                <i><img src="assets/images/hdr-top-line.svg" alt=""></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="header-bottom">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="header-bottom-cntlr">
+            <div class="hdr-btm-left">
+              <div class="logo">
+                <a href="#">
+                  <img src="assets/images/logo.svg" alt="">
+                </a>
+              </div>
+            </div>
+            <div class="hdr-btm-right">
+              <div class="hdr-menu">
+                <nav class="main-nav">
+                  <ul class="clearfix reset-list">
+                    <li class="current-menu-item"><a href="#">latest competitions</a></li>
+                    <li class="menu-item-has-children"><a href="#">entry lists</a></li>
+                    <li><a href="#">live draws</a></li>
+                    <li><a href="#">winners</a></li>
+                    <li><a href="#">forest projects</a></li>
+                    <li><a href="#">how it</a></li>
+                  </ul>
+                </nav>
+              </div>
+              <div class="hdr-add-to-card">
+                <div class="hdr-add-to-card-icon">
+                  <img src="assets/images/Cart-icon.svg" alt="">
+                  <span class="hdr-add-to-card-items">2</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
 <section class="fl-angle-hdr-cntlr">
   <div class="fl-angle-hdr">
     <span class="fl-angle-hdr-join"></span>
