--- a/themes/wwcomps/about-us.html
+++ b/themes/wwcomps/about-us.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<!--   <?php $favicon = get_theme_mod('favicon'); if(!empty($favicon)) { ?> 
+
+  <!--   <?php $favicon = get_theme_mod('favicon'); if(!empty($favicon)) { ?> 
   <link rel="shortcut icon" href="<?php echo $favicon; ?>" />
   <?php } ?> -->
 
@@ -19,6 +20,7 @@
   <link rel="stylesheet" type="text/css" href="assets/slick.slider/slick-theme.css">
   <link rel="stylesheet" type="text/css" href="assets/slick.slider/slick.css">
   <link rel="stylesheet" type="text/css" href="assets/swiper/swiper-bundle.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -32,6 +34,59 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->  
+
+
+    <svg style="display: none;">
+
+      <!-- <svg class="id-name" width="16" height="16" viewBox="0 0 16 16" fill="#FF5C26">
+      <use xlink:href="#id-name"></use> </svg> -->
+
+      <!-- start of Ranojit -->
+
+
+
+
+      <!-- start of noyon -->
+
+      <symbol id="instagram-icon" xmlns="http://www.w3.org/2000/svg" width="13.711" height="13.711" viewBox="0 0 13.711 13.711">
+        <path id="Path_146" data-name="Path 146" d="M136.454,25.668a1.769,1.769,0,0,1-1.759,1.759H124.5a1.768,1.768,0,0,1-1.758-1.759V15.474a1.767,1.767,0,0,1,1.758-1.758H134.7a1.768,1.768,0,0,1,1.759,1.758Zm-1.554-6.15h-1.2a3.879,3.879,0,0,1,.179,1.17,4.265,4.265,0,0,1-8.525,0,3.91,3.91,0,0,1,.179-1.17h-1.259V25.3a.541.541,0,0,0,.544.545h9.543a.541.541,0,0,0,.544-.545Zm-5.293-1.643a2.67,2.67,0,1,0,2.758,2.669A2.711,2.711,0,0,0,129.607,17.875Zm5.293-2.017a.617.617,0,0,0-.615-.616h-1.554a.618.618,0,0,0-.616.616v1.473a.618.618,0,0,0,.616.616h1.554a.617.617,0,0,0,.615-.616Z" transform="translate(-122.743 -13.716)"/>
+      </symbol>
+
+      <symbol id="twiter-icon" xmlns="http://www.w3.org/2000/svg" width="14.069" height="11.426" viewBox="0 0 14.069 11.426">
+        <path id="Path_147" data-name="Path 147" d="M159.071,17.706c.009.125.009.25.009.375a8.208,8.208,0,0,1-12.631,6.909,5.937,5.937,0,0,0,.7.035,5.776,5.776,0,0,0,3.579-1.231,2.89,2.89,0,0,1-2.7-2,3.61,3.61,0,0,0,.545.045,3.072,3.072,0,0,0,.759-.1,2.884,2.884,0,0,1-2.312-2.83v-.036a2.892,2.892,0,0,0,1.3.366,2.889,2.889,0,0,1-.893-3.856,8.2,8.2,0,0,0,5.945,3.017,3.293,3.293,0,0,1-.071-.66,2.886,2.886,0,0,1,4.99-1.973,5.694,5.694,0,0,0,1.83-.7,2.881,2.881,0,0,1-1.268,1.589,5.8,5.8,0,0,0,1.661-.447A6.19,6.19,0,0,1,159.071,17.706Z" transform="translate(-146.449 -14.858)"/>
+      </symbol>
+
+      <symbol id="youtube-icon" xmlns="http://www.w3.org/2000/svg" width="15.996" height="11.426" viewBox="0 0 15.996 11.426">
+        <path id="Path_148" data-name="Path 148" d="M186.224,24.445a2.027,2.027,0,0,1-1.723,1.616,53.625,53.625,0,0,1-5.99.223,53.634,53.634,0,0,1-5.99-.223,2.046,2.046,0,0,1-1.731-1.616,18.079,18.079,0,0,1-.277-3.874A17.531,17.531,0,0,1,170.8,16.7a2.035,2.035,0,0,1,1.722-1.615,53.4,53.4,0,0,1,5.99-.224,53.387,53.387,0,0,1,5.99.224,2.044,2.044,0,0,1,1.731,1.615,18.087,18.087,0,0,1,.277,3.874A17.582,17.582,0,0,1,186.224,24.445Zm-4.553-4.356-4.57-2.856a.565.565,0,0,0-.58-.018.578.578,0,0,0-.295.5v5.713a.578.578,0,0,0,.295.5A.612.612,0,0,0,176.8,24a.53.53,0,0,0,.3-.089l4.57-2.857a.567.567,0,0,0,0-.964Z" transform="translate(-170.513 -14.858)"/>
+      </symbol>
+
+      <symbol id="facebook-icon" xmlns="http://www.w3.org/2000/svg" width="7.713" height="14.854" viewBox="0 0 7.713 14.854">
+        <path id="Path_145" data-name="Path 145" d="M112.561,15.037h-1.4c-1.1,0-1.3.526-1.3,1.285v1.687h2.616l-.348,2.643h-2.268v6.775h-2.731V20.652h-2.276V18.009h2.276V16.063a3.185,3.185,0,0,1,3.4-3.49,17.706,17.706,0,0,1,2.036.107Z" transform="translate(-104.848 -12.573)"/>
+      </symbol>
+
+
+
+      <!-- start of shariful -->
+
+
+
+
+
+      <!-- start of Milon -->
+
+
+
+
+      <!-- start of Sabbir -->
+
+
+
+      <!-- start of Niaz -->
+
+
+
+
+  </svg>
 
 </head>
 <body>
@@ -49,6 +104,7 @@
     </div> 
   </div>
 </section>
+
 <section class="page-banner-section">
   <div class="banner-bg">
     <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
@@ -69,6 +125,7 @@
     </div>
   </div>    
 </section>
+
 <footer class="footer-wrp">
   <div class="footer-top">
     <div class="container">
@@ -169,6 +226,7 @@
     </div>
   </div> 
 </footer>
+
 <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
 <script src="https://code.jquery.com/jquery-migrate-3.0.0.js"></script>
 <script src="assets/js/popper.min.js"></script>
