--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -203,32 +203,47 @@
 </section>
 
 
-<section class="main-content">
+
+
+<section class="lates-compititions-section">
   <div class="fl-angle-hdr">
     <span class="fl-angle-hdr-join"></span>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <div class="fl-angle-sec-hdr">
-            <h2 class="fl-h5 flash-title"><span>LATEST</span> WINNERS</h2>
+            <h2 class="fl-h5 flash-title"><span>LATEST</span> COMPETITIONS</h2>
           </div>
         </div>
       </div>
     </div> 
   </div>
 
-  <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-
+  <div class="lates-winners-sec-con inline-bg" style="background: url(assets/images/lates-winners-sec-con-bg.jpg);">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+             <div class="lates-winners-slider-filter">
+                 <div class="slider-filter">
+                  <ul class="filter reset-list">
+                    <li class="active"><a data-filter="all"  class="all" href="#">ALL</a></li>
+                    <li><a data-filter="cars" class="cars" href="#">CARS</a></li>
+                    <li><a data-filter="games" class="games" href="#">GAMES</a></li>
+                    <li><a data-filter="holiday" class="holiday" href="#">HOLIDAY</a></li>
+                    <li><a data-filter="tvs" class="tvs" href="#">TVS</a></li>
+                  </ul>
+                </div>
+             </div>
+          </div>
+          <div class="col-md-12">
+            <div class="lwsc-btn">
+              <a class="fl-btn" href="#">SEE ALL COMPETITIONS</a>
+            </div>
+          </div>
         </div>
-        <div class="col-md-6">
-        </div>
-      </div>
-  </div>    
+    </div> 
+  </div>   
 </section>
-
-
 
 <section class="lates-winners-section">
   <div class="fl-angle-hdr">
@@ -248,7 +263,17 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-
+             <div class="lates-winners-slider-filter">
+                 <div class="slider-filter">
+                  <ul class="filter reset-list">
+                    <li class="active"><a data-filter="all"  class="all" href="#">ALL</a></li>
+                    <li><a data-filter="cars" class="cars" href="#">CARS</a></li>
+                    <li><a data-filter="games" class="games" href="#">GAMES</a></li>
+                    <li><a data-filter="holiday" class="holiday" href="#">HOLIDAY</a></li>
+                    <li><a data-filter="tvs" class="tvs" href="#">TVS</a></li>
+                  </ul>
+                </div>
+             </div>
           </div>
           <div class="col-md-12">
             <div class="lwsc-btn">
