--- a/themes/wwcomps/about-us.html
+++ b/themes/wwcomps/about-us.html
@@ -90,6 +90,108 @@
 
 </head>
 <body>
+
+
+<header class="header">
+  <div class="header-top">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="header-top-cntlr">
+            <div class="header-top-socials">
+              <ul class="reset-list">
+                <li>
+                  <a href="#">
+                    <i>
+                      <svg class="facebook-icon" width="7.713" height="14.854" viewBox="0 0 7.713 14.854" fill="#fff">
+                      <use xlink:href="#facebook-icon"></use> </svg>
+                    </i>
+                  </a>
+                </li>
+
+                <li>
+                  <a href="#">
+                    <i>
+                      <svg class="instagram-icon" width="13.711" height="13.711" viewBox="0 0 13.711 13.711" fill="#fff">
+                      <use xlink:href="#instagram-icon"></use> </svg>
+                    </i>
+                  </a>
+                </li>
+
+                <li>
+                  <a href="#">
+                    <i>
+                      <svg class="twiter-icon" width="14.069" height="11.426" viewBox="0 0 14.069 11.426" fill="#fff">
+                      <use xlink:href="#twiter-icon"></use> </svg>
+                    </i>
+                  </a>
+                </li>
+
+                <li>
+                  <a href="#">
+                    <i>
+                      <svg class="youtube-icon" width="15.996" height="11.426" viewBox="0 0 15.996 11.426" fill="#fff">
+                      <use xlink:href="#youtube-icon"></use> </svg>
+                    </i>
+                  </a>
+                </li>
+
+              </ul>
+            </div>
+            <div class="header-top-right">
+              <div class="hdr-top-rt-login">
+                <button>Login</button>
+                <i><img src="assets/images/user-icon.svg" alt=""></i>
+              </div>
+              <div class="hdr-top-rt-register">
+                <button>Register</button>
+                <i><img src="assets/images/hdr-top-line.svg" alt=""></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="header-bottom">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="header-bottom-cntlr">
+            <div class="hdr-btm-left">
+              <div class="logo">
+                <a href="#">
+                  <img src="assets/images/logo.svg" alt="">
+                </a>
+              </div>
+            </div>
+            <div class="hdr-btm-right">
+              <div class="hdr-menu">
+                <nav class="main-nav">
+                  <ul class="clearfix reset-list">
+                    <li class="current-menu-item"><a href="#">latest competitions</a></li>
+                    <li class="menu-item-has-children"><a href="#">entry lists</a></li>
+                    <li><a href="#">live draws</a></li>
+                    <li><a href="#">winners</a></li>
+                    <li><a href="#">forest projects</a></li>
+                    <li><a href="#">how it</a></li>
+                  </ul>
+                </nav>
+              </div>
+              <div class="hdr-add-to-card">
+                <div class="hdr-add-to-card-icon">
+                  <img src="assets/images/Cart-icon.svg" alt="">
+                  <span class="hdr-add-to-card-items">2</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
+
 <section class="fl-angle-hdr-cntlr">
   <div class="fl-angle-hdr">
     <span class="fl-angle-hdr-join"></span>
@@ -108,7 +210,7 @@
 <section class="page-banner-section">
   <div class="banner-bg">
     <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
-    <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/hit-bnr-page-rgt-img.jpg')"></div>
+    <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/ab-bnr-page-rgt-img.jpg')"></div>
   </div>
   <div class="container">
     <div class="row">
@@ -118,7 +220,7 @@
           <h3 class="fl-h3">OUR COMPANY IS RUN BY 6 INDIVIDUALS SET ON MAKING A GLOBAL CHANGE.</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. Quisque gravida sagittis libero, eu euismod urna placerat sit amet. Mauris tempus molestie sem, in accumsan justo porta non.</p>
           <p>Nulla volutpat eget est et ullamcorper. Ut porttitor nunc ac elit maximus maximus. Proin vestibulum risus purus, sed vestibulum augue bibendum at. Cras porta commodo diam, cursus egestas dui condimentum vitae. Etiam pretium tincidunt tortor, et dapibus purus placerat ut.</p>
-          <a class="fl-btn" href="#">SEE COMPETITIONS</a>
+          <a class="fl-btn" href="#">READ OUR FAQS</a>
           <span><img src="assets/images/hit-page-des-angle.png" alt=""></span>
         </div>
       </div>
