--- a/themes/wwcomps/faqs.html
+++ b/themes/wwcomps/faqs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>How it works</title>
+  <title>FAQs</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -90,6 +90,7 @@
 
 </head>
 <body>
+
 
 <header class="header">
   <div class="header-top">
@@ -198,7 +199,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="fl-angle-sec-hdr">
-            <h2 class="fl-h5 flash-title"><span>HOW IT</span> WORKS</h2> 
+            <h2 class="fl-h5 flash-title"><span>faq</span>S</h2>
           </div>
         </div>
       </div>
@@ -209,30 +210,100 @@
 <section class="page-banner-section">
   <div class="banner-bg">
     <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
-    <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/hit-bnr-page-rgt-img.jpg')"></div>
+    <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/faqs-bnr-page-rgt-img.jpg')"></div>
   </div>
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="page-des">
-          <h2 class="fl-h1"><strong>PLAY TO</strong> PLANT.</h2>
-          <h3 class="fl-h3">WIN YOUR DREAM PRIZE WHILE HELPING TO RESTORE FORESTS WORLDWIDE.</h3>
-          <strong>Here's how it works:</strong>
-          <div class="default-page-con">
-            <ol>
-              <li>Choose a competition and how many entries you would like.</li>
-              <li>Answer the qualifying question (be sure to answer correctly!) <br> and complete payment.</li>
-              <li>Tickets for all correct answers are entered into the draw, streamed LIVE on Facebook using Google’s random number generator.</li>
-              <li>If you win, we may try to contact you whilst live on our website and Facebook, so be prepared!</li>
-            </ol>
+        <div class="page-des faqs-pg-des">
+          <h2><strong>FREQUENTLY ASKED </strong> QUESTIONS</h2>
+          <div class="hh-accordion-tab-row">
+              <h3 class="hh-accordion-title">Question Number #1?</h3>
+              <div class="hh-accordion-des">
+                <div>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
+                  </p>
+              </div>
+            </div>
           </div>
-          <a class="fl-btn" href="#">SEE COMPETITIONS</a>
+            <div class="hh-accordion-tab-row">
+              <h3 class="hh-accordion-title">Question Number #2?</h3>
+              <div class="hh-accordion-des">
+                <div>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
+                  </p>
+              </div>
+            </div>
+          </div>
+          <div class="hh-accordion-tab-row">
+            <h3 class="hh-accordion-title">Question Number #3?</h3>
+              <div class="hh-accordion-des">
+                <div>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
+                  </p>
+              </div>
+            </div>
+          </div>
+          <div class="hh-accordion-tab-row">
+            <h3 class="hh-accordion-title">Question Number #4?</h3>
+              <div class="hh-accordion-des">
+                <div>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
+                  </p>
+              </div>
+            </div>
+          </div>
+          <div class="hh-accordion-tab-row">
+            <h3 class="hh-accordion-title">Question Number #5?</h3>
+              <div class="hh-accordion-des">
+                <div>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
+                  </p>
+              </div>
+            </div>
+          </div>
+          <div class="hh-accordion-tab-row">
+            <h3 class="hh-accordion-title">Question Number #6?</h3>
+              <div class="hh-accordion-des">
+                <div>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
+                  </p>
+              </div>
+            </div>
+          </div>
+          <div class="hh-accordion-tab-row">
+            <h3 class="hh-accordion-title">Question Number #7?</h3>
+              <div class="hh-accordion-des">
+                <div>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
+                  </p>
+              </div>
+            </div>
+          </div>
+          <div class="hh-accordion-tab-row">
+            <h3 class="hh-accordion-title">Question Number #8?</h3>
+              <div class="hh-accordion-des">
+                <div>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
+                  </p>
+              </div>
+            </div>
+          </div>
           <span><img src="assets/images/hit-page-des-angle.png" alt=""></span>
         </div>
       </div>
     </div>
   </div>    
 </section>
+
 <footer class="footer-wrp">
   <div class="footer-top">
     <div class="container">
