--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -168,7 +168,15 @@
                 <nav class="main-nav">
                   <ul class="clearfix reset-list">
                     <li class="current-menu-item"><a href="#">latest competitions</a></li>
-                    <li class="menu-item-has-children"><a href="#">entry lists</a></li>
+                    <li class="menu-item-has-children">
+                      <a href="#">entry lists</a>
+                      <ul class="sub-menu" style="">
+                        <li><a href="#">Sub Menu</a></li>
+                        <li><a href="#">Sub Menu</a></li>
+                        <li><a href="#">Sub Menu</a></li>
+                        <li><a href="#">Sub Menu</a></li>
+                      </ul>
+                    </li>
                     <li><a href="#">live draws</a></li>
                     <li><a href="#">winners</a></li>
                     <li><a href="#">forest projects</a></li>
